version/0.31/_sources/api/solver/_autosummary/settings/recirculation_outlet_2_child.rst.txt
:orphan:

.. _recirculation_outlet_2_child:

recirculation_outlet_child
==========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.recirculation_outlet_2_child
    :show-inheritance:

.. rubric:: Attributes

=============================   ======================================

Attribute                                                      Summary

=============================   ======================================
:ref:`name <name_2>`                               Name of the object.

:ref:`location <location_2>`                      Input location name.

:ref:`settings <settings_26>`       Domain name to define settings on.

=============================   ======================================

.. rubric:: Methods

======================   ===============================================

Method                                                           Summary

======================   ===============================================
:ref:`split <split_1>`       Input boundary and location names to split.

======================   ===============================================

.. rubric:: Included in:

======================================================   ================

Parent                                                            Summary

======================================================   ================
:ref:`recirculation_outlet_2 <recirculation_outlet_2>`       Thread-type.

======================================================   ================

